@@ -29,7 +29,6 @@ package org.hisp.dhis.tracker.imports.config;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import org.hisp.dhis.tracker.imports.preheat.supplier.ClassBasedSupplier;
 import org.hisp.dhis.tracker.imports.preheat.supplier.CurrentUserSupplier;
 import org.hisp.dhis.tracker.imports.preheat.supplier.DefaultsSupplier;
@@ -76,7 +75,7 @@ public class TrackerPreheatConfig {
 
   @Bean("preheatOrder")
   public List<String> getPreheatOrder() {
-    return preheatOrder.stream().map(Class::getSimpleName).collect(Collectors.toList());
+    return preheatOrder.stream().map(Class::getSimpleName).toList();
   }
 
   @Bean("preheatStrategies")
